# MagicMoments_SKB-F1_SKB_P5

./: .gitignore  CLAUDE.md  ENDPOINTS.md  PRD.md  find_cmems_ds.py  test_all_workflows.py  train_.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-schema-foundation-dummy-inference/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md  wave0-probe-results.md
.planning/phases/02-trajectory-mission-planner/: 02-01-env-data-config-PLAN.md  02-01-env-data-config-SUMMARY.md  02-02-SUMMARY.md  02-02-mission-scoring-PLAN.md  02-03-tracker-PLAN.md  02-03-tracker-SUMMARY.md  02-04-mission-planner-PLAN.md  02-04-mission-planner-SUMMARY.md  02-05-fetch-real-e2e-PLAN.md  02-05-fetch-real-e2e-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-real-training-weight-swap-mission-export-e2e/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-05-PLAN.md  03-06-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: README.md  __init__.py  config.yaml  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py  tracker_routes.py
backend/core/: __init__.py  config.py  schemas.py
backend/data/: india_coastline_segmented.geojson
backend/mission/: __init__.py  __main__.py  cli.py  export.py  planner.py  scoring.py  tsp.py
backend/ml/: __main__.py  cli.py  features.py  inference.py  model.py  spectral.py  weights.py
backend/ml/checkpoints/: metrics.json
backend/physics/: __init__.py  __main__.py  cli.py  env_data.py  env_service.py  kde.py  tracker.py
backend/services/: __init__.py  ai_detector.py  aoi_registry.py  drift_engine.py  env_service.py  mission_planner.py  mock_data.py  runtime_flags.py  stac_service.py
backend/tests/integration/: test_e2e_dummy_chain.py  test_inference_dummy.py  test_planner_synth.py  test_tracker_real.py  test_tracker_synth.py
backend/tests/unit/: test_config.py  test_env_data.py  test_features.py  test_kde.py  test_planner.py  test_schemas.py  test_scoring.py  test_tsp.py
data/basemap/: README.md  ne_10m_coastline_indian_eez.dbf  ne_10m_coastline_indian_eez.shp  ne_10m_coastline_indian_eez.shx
data/prebaked/: MANIFEST.json  arabian_sea_gyre_edge_detections.json  arabian_sea_gyre_edge_forecast.json  arabian_sea_gyre_edge_mission.json  bay_of_bengal_mouth_detections.json  bay_of_bengal_mouth_forecast.json  bay_of_bengal_mouth_mission.json  gulf_of_mannar_detections.json  gulf_of_mannar_forecast.json  gulf_of_mannar_mission.json  mumbai_offshore_detections.json  mumbai_offshore_forecast.json  mumbai_offshore_mission.json
frontend/: .env.example  .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ContentSection.tsx  DriftAppShell.tsx  HeroSection.tsx  HistoryPage.tsx  IntelDashboardPage.tsx  LandingForm.tsx  LandingPage.tsx  NewLandingPage.tsx  (+1 more)
frontend/tests/: drive.mjs
scripts/: clip_basemap.py  fetch_demo_env.py  parity_hash.py  prebake_demo.py  run_full_chain_dummy.py  run_full_chain_real.py
tests/: test_export.py  test_fallback.py  test_prebake_parity.py  test_weight_swap.py
tests/fixtures/: synthetic_mission.py
(+3 files in other folders)
