[project]
name = "drift-backend"
version = "0.1.0"
description = "DRIFT / PlastiTrack backend intelligence layer — schema foundation + dummy inference"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "geojson-pydantic==1.2.0",
    "PyYAML>=6.0",
    # ML runtime
    "torch==2.7.0",
    "torchvision==0.22.0",
    "segmentation-models-pytorch>=0.5.0,<0.6.0",
    "matplotlib>=3.9,<4.0",
    # Geospatial + numerics
    "rasterio>=1.3.10,<1.6",
    "shapely==2.0.3",
    "fiona<1.10",
    "pyproj==3.6.1",
    "geopandas==0.14.3",
    "rioxarray>=0.15.1",
    "xarray==2024.2.0",
    "netcdf4==1.6.5",
    "numpy==1.26.4",
    "scikit-image==0.22.0",
    "scikit-learn==1.4.1.post1",
    "utm==0.7.0",
    "global_land_mask>=1.0.0",
    # IO, data, and API helpers
    "python-dotenv==1.0.1",
    "pystac-client>=0.7.5",
    "pystac>=1.9.0",
    "reportlab>=4.2,<5.0",
    "copernicusmarine==1.2.2",
    "cdsapi==0.6.1",
    "httpx>=0.26,<0.27",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
